--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,11 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     font-family: "Inter", sans-serif;
-    padding: 70px;
+    padding: 30px;
+}
+
+header{
+
 }
 
 .container_topo{
@@ -12,9 +16,11 @@ body{
     align-items: center;
     color: #F4F4F4;
     gap: 15px;
+
 }
 .img_canto{
     display: flex;
-    align-items: end;
-    justify-content: end;
+    position: relative;
+    top: -40px;
+    justify-content: flex-end;
 }
