--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,15 @@ main{
 
     display: flex;
     align-items: center;
-    height: 80%;
-    width: 80%;
+    height: 70%;
+    width: 70%;
     color: #F4F4F4;
     align-items: self-end;
 }
 
+.genres{
+    font-size: 15px;
+}
 
 .caixa_new{
     background-color: #DDC31C;
@@ -73,10 +76,25 @@ footer{
     border-radius: 5px;
 }
 
-.filmes img{
+.filmes {
     display: flex;
     height: 144px;
-    width: 222px;
+    width: 100%;
+    justify-content: end;
+    align-items: end;
+    position: relative;
+
+    color: white;
+    gap: 8px;
+}
+
+.filmes div{
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-items: center;
+}
+
+.filmes img{
+    height: 200px;
+    
 }
