--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ footer{
     justify-content: center;
     transform: translate(-1%, 100%);
     position: relative;
+    padding-bottom: 20px;
 }
 
 .centralizar img{
@@ -120,6 +121,7 @@ footer{
     
 }
 
+
 @media (max-width: 1024px){
 
 body{
@@ -127,21 +129,33 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-        
 }
 
 main{
    display: flex;
+   width: 100%;
    margin-top: -100px;
-}
-footer{
 
-    background-color: #DDC31C;
+}
+
+
+footer{
+    width: 100%;
+    height: 30%;
     display: flex;
-    text-align: start;
+
+}
+
+
+.texto1{
+    display:flex ;
+    width: 400px;
     
 }
 
+.container_estrela{
+
+    height: 40%;
 }
     
 .filmes{
@@ -151,6 +165,8 @@ footer{
 .centralizar{
 
     display: flex;
-    justify-content: end;
-    align-items: end;
+    top: 50%;
+    right: 20%;
+}
+
 }
